fix: enable element to move correctly on mobile

--- a/src/components/Note/Note.module.css
+++ b/src/components/Note/Note.module.css
@@ -11,6 +11,8 @@
 }
 
 .noteInner {
+  touch-action: none;
+  cursor: grab;
   width: 100%;
   height: 100%;
   position: relative;
